# awesome-cpp-things

./: CMakeLists.txt  README.md  yeslinux-nomac.cpp
.github/workflows/: build.yml
includes/: square.hpp
src/: compile_time_variable.cpp  square.cpp
